# CashDash

./: Makefile  docker-compose.yml
backend/: Dockerfile  alembic.ini  generate_test_data.py  main.py  pyproject.toml  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 2c8d79c0352f_.py  4e314e256882_.py  78f824a8c209_.py  b5bc8604cbf4_.py
backend/annotations/: transactions.py
backend/database/: __init__.py  accessor.py  database.py
backend/dependencies/: __init__.py  transactions.py
backend/exceptions/: __init__.py  transactions.py
backend/handlers/: __init__.py  transactions.py
backend/models/: __init__.py  transactions.py
backend/repository/: __init__.py  transactions.py
backend/schemas/: __init__.py  transactions.py
backend/services/: __init__.py  transactions.py
frontend/: Dockerfile  api.py  main.py  pyproject.toml
frontend/static/css/: base.css
frontend/templates/: base.html  transactions.html
frontend/templates/blocks/: transactions_list.html  transactions_list.html.bak
